--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,3 +1,5 @@
+CC = gcc
+
 CFLAGS = -Wall -Werror -O2
 LDFLAGS =
 LOG_LEVEL ?= WARN
@@ -5,7 +7,7 @@ EXTRA_CFLAGS ?= -DLOG_LEVEL=LOG_$(LOG_LEVEL)
 EXTRA_LDFLAGS ?=
 
 .PHONY: all
-all: bpf lib capture
+all: bpf lib capture strace-log-watch
 
 .PHONY: bpf
 bpf:
@@ -14,10 +16,10 @@ bpf:
 lib: lib.c
 	$(CC) $(CFLAGS) $(EXTRA_CFLAGS) -o "$@" "$<" $(LDFLAGS) -ldl $(EXTRA_LDFLAGS)
 
-capture: capture.c
+%: %.c
 	$(CC) $(CFLAGS) $(EXTRA_CFLAGS) -o "$@" "$<" $(LDFLAGS) $(EXTRA_LDFLAGS)
 
 .PHONY: clean
 clean:
-	rm -f lib capture
+	rm -f lib capture strace-log-watch
 	$(MAKE) -C bpf clean
