Generate landlock.files for hsh

--- a/hsh/Makefile
+++ b/hsh/Makefile
@@ -4,6 +4,10 @@ include $(ROOT)/../build/common.makefile
 EXE ?= hsh
 SRC ?= main.c
 
+DEFAULT_SHELL ?= /bin/sh
+
+CFLAGS += -DDEFAULT_SHELL=\"$(DEFAULT_SHELL)\"
+
 .PHONY: build
 build: $(EXE)
 
@@ -11,6 +15,9 @@ $(EXE).c: $(SRC) filter.bpfc landlock.filesc \
 	capabilities.c seccomp.c version.c r.h
 	$(SINGLE_FILE) -o "$@" "$<"
 
+landlock.files: Makefile
+	$(TOOLS)/poor_ldd "$(DEFAULT_SHELL)" "$@"
+
 .PHONY: clean
 clean:
-	rm -f $(EXE) $(EXE).c *.bpfc version.c
+	rm -f $(EXE) $(EXE).c *.filesc *.files *.bpfc version.c
