--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -14,6 +14,8 @@ jobs:
       UNPRIVILEGED: ubuntu
       TEST_OUTPUT_DIR: /tmp/tests
       WORKDIR: /tmp/workdir
+      #TRACE: true
+      TIMEOUT: 10
     steps:
     - name: Install minimal dependencies
       run: |
@@ -32,7 +34,7 @@ jobs:
         echo "$UNPRIVILEGED ALL = NOPASSWD: $(which apt-get)" | tee -a /etc/sudoers
 
     - name: Build package
-      run: sudo -u $UNPRIVILEGED --preserve-env=WORKDIR env SUDO=sudo build/ubuntu/mk
+      run: sudo -u $UNPRIVILEGED --preserve-env=WORKDIR,TEST_OUTPUT_DIR,TIMEOUT,TRACE env SUDO=sudo build/ubuntu/mk
 
     - name: Archive source package
       uses: actions/upload-artifact@v4
@@ -48,7 +50,7 @@ jobs:
       run: |
         export TOOLS=$(readlink -f "$WORKDIR"/*/tools)
         run() {
-          sudo -u $UNPRIVILEGED --preserve-env=TEST_OUTPUT_DIR,TOOLS \
+          sudo -u $UNPRIVILEGED --preserve-env=TEST_OUTPUT_DIR,TOOLS,TIMEOUT,TRACE \
             env SUT=$(which $1) SHOW_IDS=1 \
             tools/test-harness -c $1
         }
@@ -73,7 +75,7 @@ jobs:
       ARCH: archlinux
       UNPRIVILEGED: arch
       TEST_OUTPUT_DIR: /tmp/tests
-      TRACE: true
+      #TRACE: true
       TIMEOUT: 10
     steps:
     - name: Install minimal dependencies
@@ -118,7 +120,7 @@ jobs:
       run: |
         export TOOLS=$(readlink -f build/archlinux/src/*/tools)
         run() {
-          sudo -u $UNPRIVILEGED --preserve-env=TEST_OUTPUT_DIR,TOOLS \
+          sudo -u $UNPRIVILEGED --preserve-env=TEST_OUTPUT_DIR,TOOLS,TIMEOUT,TRACE \
             env SUT=$(which $1) SHOW_IDS=1 \
             tools/test-harness -c $1
         }
