--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -32,8 +32,6 @@ jobs:
 
     - name: Check out repository code
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
 
     - name: Create an unprivileged user
       if: ${{ matrix.os.name == 'ubuntu2204' }}
@@ -52,7 +50,7 @@ jobs:
     - name: Archive source package
       uses: actions/upload-artifact@v4
       with:
-        name: source-package.${{github.sha}}.${{github.job}}.${{matrix.host}}.${{matrix.os.name}}
+        name: ${{github.job}}-source-package.${{github.sha}}.${{matrix.host}}.${{matrix.os.name}}
         retention-days: 7
         path: build/ubuntu/out/*.tar
 
@@ -81,7 +79,6 @@ jobs:
         path: "${{env.TEST_OUTPUT_DIR}}/*-tests-*.tar.gz"
 
   archlinux:
-    continue-on-error: true
     strategy:
       matrix:
         host: [ "ubuntu-22.04", "ubuntu-24.04" ]
@@ -92,7 +89,7 @@ jobs:
       ARCH: archlinux
       UNPRIVILEGED: arch
       TEST_OUTPUT_DIR: /tmp/tests
-      TRACE: true
+      #TRACE: true
       TIMEOUT: 10
     steps:
     - name: Install minimal dependencies
@@ -110,8 +107,6 @@ jobs:
 
     - name: Check out repository code
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
 
     - name: Create an unprivileged user
       run: |
