--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,8 +12,6 @@ jobs:
     steps:
       - name: Checkout repository code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Check version
         run: (tools/version -C && echo "RELEASE=1" || echo "RELEASE=") >> "$GITHUB_ENV"
@@ -49,7 +47,7 @@ jobs:
               run_id: context.payload.workflow_run.id,
             });
             let matchedArtifacts = allArtifacts.data.artifacts.filter((artifact) => {
-              return artifact.name.startsWith("PKGBUILD") || artifact.name.startsWith("source-package")
+              return artifact.name.startsWith("PKGBUILD") || artifact.name.contains("source-package")
             });
             let fs = require('fs');
             for(const artifact of matchedArtifacts) {
