--- a/hnode/Makefile
+++ b/hnode/Makefile
@@ -1,9 +1,11 @@
 ROOT := $(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))
 include $(ROOT)/../build/common.makefile
 
+NODEJS_PREFIX ?= /usr
+
 CFLAGS += -std=c++20 # nodejs >= 23.0.0 requires C++20
-CFLAGS += -I/usr/include/node
-LDFLAGS += -lnode
+CFLAGS += -I$(NODEJS_PREFIX)/include/node
+LDFLAGS += -L$(NODEJS_PREFIX)/lib -lnode
 
 CFLAGS += $(shell $(PKG_CONFIG) --cflags libuv)
 LDFLAGS += $(shell $(PKG_CONFIG) --libs libuv)
